--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Skin Expert</title>
-  <link rel="stylesheet" href="styles.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;600&family=Julius+Sans+One&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <section>
+  <header>
     <nav class="navbar">
-      <img class="logo" src="images/SKINEXPERT.jpg" alt="Skin Expert logo">
       <div class="nav-links">
         <a href="#" class="header-nav-link">SKIN EXPERT</a>
         <a href="#" class="header-nav-link">BUTIK</a>
@@ -19,7 +21,10 @@
         <a href="#" class="header-nav-link">KONTAKT</a>
       </div>
     </nav>
-  </section>
+    <div class="logo-container">
+      <img class="logo" src="images/SKINEXPERT.jpg" alt="Skin Expert logo">
+    </div>
+  </header>
 
 
 </body>
