added owner img

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     </div>
   </header>
 
+  <main>
+    <section id="owner">
+      <img class="owner-img" src="images/Felicia.jpg" alt="Felicia">
+    </section>
+  </main>
 
 </body>
 
