added hero image and styling

--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
         <a href="#" class="header-nav-link">KONTAKT</a>
       </div>
     </nav>
-    <div class="logo-container">
-      <img class="logo" src="images/SKINEXPERT.jpg" alt="Skin Expert logo">
+    <div class="hero-image">
+      <div class="hero-text">
+        <h1>Welcome to Skin Expert</h1>
+        <p>Your one-stop solution for all skin care needs.</p>
+        <button>Learn More</button>
+      </div>
     </div>
   </header>
 
