--- a/index.html
+++ b/index.html
@@ -31,8 +31,25 @@
   </header>
 
   <main>
-    <section id="owner">
-      <img class="owner-img" src="images/Felicia.jpg" alt="Felicia">
+    <section class="grid-container">
+      <article class="grid-card">
+        <img class="card-image" src="images/Felicia.jpg" alt="Product 1">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
+          commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
+        </p>
+      </article>
+      <article class="grid-card">
+        <img class="card-image" src="images/product1.jpg" alt="Product 1">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
+          commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
+        </p>
+      </article>
+      <article class="grid-card">
+        <img class="card-image" src="images/product1.jpg" alt="Product 1">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
+          commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
+        </p>
+      </article>
     </section>
   </main>
 
