--- a/index.html
+++ b/index.html
@@ -39,13 +39,25 @@
         </p>
       </article>
       <article class="grid-card">
-        <img class="card-image" src="images/product1.jpg" alt="Product 1">
+        <img class="card-image" src="images/logga1.jpg" alt="Product 1">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
           commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
         </p>
       </article>
       <article class="grid-card">
-        <img class="card-image" src="images/product1.jpg" alt="Product 1">
+        <img class="card-image" src="images/logga2.jpg" alt="Product 1">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
+          commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
+        </p>
+      </article>
+      <article class="grid-card">
+        <img class="card-image" src="images/SKINEXPERT.jpg" alt="Product 1">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
+          commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
+        </p>
+      </article>
+      <article class="grid-card">
+        <img class="card-image" src="images/SKINEXPERT.jpg" alt="Product 1">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
           commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
         </p>
