added media query

--- a/index.html
+++ b/index.html
@@ -14,11 +14,16 @@
 <body>
   <header>
     <nav class="navbar">
-      <div class="nav-links">
-        <a href="#" class="header-nav-link">SKIN EXPERT</a>
-        <a href="#" class="header-nav-link">BUTIK</a>
-        <a href="#" class="header-nav-link">OM</a>
-        <a href="#" class="header-nav-link">KONTAKT</a>
+      <div class="navbar-left">
+        <img class="logo" src="images/logga1.jpg" alt="Skin Expert Logo">
+      </div>
+      <div class="navbar-right">
+        <div class="nav-links">
+          <a href="#" class="header-nav-link">SKIN EXPERT</a>
+          <a href="#" class="header-nav-link">BUTIK</a>
+          <a href="#" class="header-nav-link">OM</a>
+          <a href="#" class="header-nav-link">KONTAKT</a>
+        </div>
       </div>
     </nav>
     <div class="hero-image">
