--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="hero-text">
         <h1>Welcome to Skin Expert</h1>
         <p>Your one-stop solution for all skin care needs.</p>
-        <button>Learn More</button>
+        <button>Läs mer</button>
       </div>
     </div>
   </header>
@@ -39,30 +39,33 @@
     <section class="grid-container">
       <article class="grid-card">
         <img class="card-image" src="images/Felicia.jpg" alt="Product 1">
+        <div class="card-text">
+          <h3>OM FELICIA</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
+            commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
+          </p>
+        </div>
+      </article>
+      <article class="grid-card">
+        <img class="card-image" src="images/hud.jpg" alt="Product 1">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
           commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
         </p>
       </article>
       <article class="grid-card">
-        <img class="card-image" src="images/logga1.jpg" alt="Product 1">
+        <img class="card-image" src="images/hud2.jpg" alt="Product 1">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
           commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
         </p>
       </article>
       <article class="grid-card">
-        <img class="card-image" src="images/logga2.jpg" alt="Product 1">
+        <img class="card-image" src="images/lillakortet.jpg" alt="Product 1">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
           commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
         </p>
       </article>
       <article class="grid-card">
-        <img class="card-image" src="images/SKINEXPERT.jpg" alt="Product 1">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
-          commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
-        </p>
-      </article>
-      <article class="grid-card">
-        <img class="card-image" src="images/SKINEXPERT.jpg" alt="Product 1">
+        <img class="card-image" src="images/hud.jpg" alt="Product 1">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
           commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
         </p>
