--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <h3>OM FELICIA</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
             commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
+            <a href="#" class="info-link">-> Läs mer</a>
           </p>
         </div>
       </article>
