added HTML file for contact

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href="#" class="header-nav-link">SKIN EXPERT</a>
           <a href="#" class="header-nav-link">BUTIK</a>
           <a href="#" class="header-nav-link">OM</a>
-          <a href="#" class="header-nav-link">KONTAKT</a>
+          <a href="kontakt.html" class="header-nav-link">KONTAKT</a>
         </div>
       </div>
     </nav>
