added styling html form

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
           <a href="#" class="header-nav-link">BUTIK</a>
           <a href="#" class="header-nav-link">OM</a>
           <a href="kontakt.html" class="header-nav-link">KONTAKT</a>
+          <a href="#" class="header-nav-link">LOGGA IN</a>
         </div>
       </div>
     </nav>
+
     <div class="hero-image">
       <div class="hero-text">
         <h1>Welcome to Skin Expert</h1>
@@ -74,6 +76,14 @@
     </section>
   </main>
 
+  <footer>
+    <p>&copy; 2024 Skin Expert. All rights reserved.</p>
+    <div class="social-media">
+      <a href="#"><img src="images/facebook-icon.png" alt="Facebook"></a>
+      <a href="#"><img src="images/instagram-icon.png" alt="Instagram"></a>
+      <a href="#"><img src="images/twitter-icon.png" alt="Twitter"></a>
+    </div>
+  </footer>
 </body>
 
 </html>
