--- a/kontakt.html
+++ b/kontakt.html
@@ -25,9 +25,11 @@
           <a href="#" class="header-nav-link">BUTIK</a>
           <a href="#" class="header-nav-link">OM</a>
           <a href="kontakt.html" class="header-nav-link">KONTAKT</a>
+          <a href="#" class="header-nav-link">LOGGA IN</a>
         </div>
       </div>
     </nav>
+
     <div class="hero-image">
       <div class="hero-text">
         <h1>Welcome to Skin Expert</h1>
@@ -38,39 +40,63 @@
   </header>
 
   <main>
-    <h1>Kontakt</h1>
+    <div class="form-container">
+      <h1 class="form-title">Kontakt</h1>
 
-    <fieldset>
-      <form action="#" method="post">
-        <legend>Dina kontaktuppgifter</legend>
-        <label for="name">Namn</label>
-        <input type="text" id="name" name="name" required>
+      <form action="https://httpbin.org/anything" method="post">
 
-        <label for="email">E-post</label>
-        <input type="email" id="email" name="email" required>
+        <fieldset>
+          <legend>Dina kontaktuppgifter</legend>
 
-        <label for="message">Meddelande</label>
-        <textarea id="message" name="message" rows="4" required></textarea>
+          <label for="name">Namn</label>
+          <input type="text" id="name" name="name" required>
+
+          <label for="email">E-post</label>
+          <input type="email" id="email" name="email" required placeholder="example@email.com">
+
+          <label for="message">Meddelande</label>
+          <textarea id="message" name="message" rows="4" required></textarea>
+        </fieldset>
 
         <fieldset>
           <legend>Välj tjänster</legend>
+
           <label for="service1">
-            <input type="checkbox" id="service1" name="services" value="service1">
+            <input type="checkbox" name="services" value="service1">
             Tjänst 1
           </label>
+
           <label for="service2">
-            <input type="checkbox" id="service2" name="services" value="service2">
+            <input type="checkbox" name="services" value="service2">
             Tjänst 2
           </label>
+
           <label for="service3">
-            <input type="checkbox" id="service3" name="services" value="service3">
+            <input type="checkbox" name="services" value="service3">
             Tjänst 3
           </label>
         </fieldset>
 
-        <button type="submit">Skicka</button>
+        <button class="contact-btn" type="submit">Skicka</button>
       </form>
+
+      <div class="side-content">
+        <h2>Hitta oss</h2>
+        <p>Adress: Hudvårdsgatan 12, 123 45 Skönhetsstad</p>
+        <p>Telefon: 012-345 67 89</p>
+        <p>E-post: kontakt@skinexpert.se</p>
+      </div>
+    </div>
   </main>
+
+  <footer>
+    <p>&copy; 2024 Skin Expert. All rights reserved.</p>
+    <div class="social-media">
+      <a href="#"><img src="images/facebook-icon.png" alt="Facebook"></a>
+      <a href="#"><img src="images/instagram-icon.png" alt="Instagram"></a>
+      <a href="#"><img src="images/twitter-icon.png" alt="Twitter"></a>
+    </div>
+  </footer>
 </body>
 
 </html>
