change layout for desktop screens

--- a/index.html
+++ b/index.html
@@ -3,27 +3,49 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0"
+  >
   <title>Skin Expert</title>
   <link
     href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;600&family=Julius+Sans+One&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+    rel="stylesheet"
+  >
+  <link
+    rel="stylesheet"
+    href="style.css"
+  >
 </head>
 
 <body>
   <header>
     <nav class="navbar">
       <div class="navbar-left">
-        <img class="logo" src="images/logga1.jpg" alt="Skin Expert Logo">
+        <img
+          class="logo"
+          src="images/logga1.jpg"
+          alt="Skin Expert Logo"
+        >
       </div>
       <div class="navbar-right">
         <div class="nav-links">
-          <a href="#" class="header-nav-link">SKIN EXPERT</a>
-          <a href="#" class="header-nav-link">BUTIK</a>
-          <a href="#" class="header-nav-link">OM</a>
-          <a href="kontakt.html" class="header-nav-link">KONTAKT</a>
-          <a href="#" class="header-nav-link">LOGGA IN</a>
+          <a
+            href="#"
+            class="header-nav-link"
+          >SKIN EXPERT</a>
+          <a
+            href="#"
+            class="header-nav-link"
+          >BUTIK</a>
+          <a
+            href="#"
+            class="header-nav-link"
+          >OM</a>
+          <a
+            href="kontakt.html"
+            class="header-nav-link"
+          >KONTAKT</a>
         </div>
       </div>
     </nav>
@@ -40,35 +62,58 @@
   <main>
     <section class="grid-container">
       <article class="grid-card">
-        <img class="card-image" src="images/Felicia.jpg" alt="Product 1">
+        <img
+          class="card-image"
+          src="images/Felicia.jpg"
+          alt="Product 1"
+        >
         <div class="card-text">
           <h3>OM FELICIA</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
             commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
-            <a href="#" class="info-link">Läs mer</a>
+            <a
+              href="#"
+              class="info-link"
+            >Läs mer</a>
           </p>
         </div>
       </article>
       <article class="grid-card">
-        <img class="card-image" src="images/hud.jpg" alt="Product 1">
+        <img
+          class="card-image"
+          src="images/hud.jpg"
+          alt="Product 1"
+        >
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
           commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
         </p>
       </article>
       <article class="grid-card">
-        <img class="card-image" src="images/hud2.jpg" alt="Product 1">
+        <img
+          class="card-image"
+          src="images/hud2.jpg"
+          alt="Product 1"
+        >
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
           commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
         </p>
       </article>
       <article class="grid-card">
-        <img class="card-image" src="images/lillakortet.jpg" alt="Product 1">
+        <img
+          class="card-image"
+          src="images/lillakortet.jpg"
+          alt="Product 1"
+        >
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
           commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
         </p>
       </article>
       <article class="grid-card">
-        <img class="card-image" src="images/hud.jpg" alt="Product 1">
+        <img
+          class="card-image"
+          src="images/hud.jpg"
+          alt="Product 1"
+        >
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus quos deleniti quidem ea quod laborum
           commodi cupiditate ex odio soluta sit sequi cumque nobis tempora veniam recusandae necessitatibus, enim at!
         </p>
@@ -79,9 +124,18 @@
   <footer>
     <p>&copy; 2024 Skin Expert. All rights reserved.</p>
     <div class="social-media">
-      <a href="#"><img src="images/facebook-icon.png" alt="Facebook"></a>
-      <a href="#"><img src="images/instagram-icon.png" alt="Instagram"></a>
-      <a href="#"><img src="images/twitter-icon.png" alt="Twitter"></a>
+      <a href="#"><img
+          src="images/facebook-icon.png"
+          alt="Facebook"
+        ></a>
+      <a href="#"><img
+          src="images/instagram-icon.png"
+          alt="Instagram"
+        ></a>
+      <a href="#"><img
+          src="images/twitter-icon.png"
+          alt="Twitter"
+        ></a>
     </div>
   </footer>
 </body>
