add social media icons + media query

--- a/index.html
+++ b/index.html
@@ -121,20 +121,21 @@
     </section>
   </main>
 
+
   <footer>
-    <p>&copy; 2024 Skin Expert. All rights reserved.</p>
+    <p>&copy; 2025 Skin Expert. All rights reserved.</p>
     <div class="social-media">
       <a href="#"><img
           src="images/facebook-icon.png"
           alt="Facebook"
         ></a>
       <a href="#"><img
-          src="images/instagram-icon.png"
+          src="images/Instagram-icon.png"
           alt="Instagram"
         ></a>
       <a href="#"><img
-          src="images/twitter-icon.png"
-          alt="Twitter"
+          src="images/linkedin.webp"
+          alt="LinkedIn"
         ></a>
     </div>
   </footer>
