--- a/kontakt.html
+++ b/kontakt.html
@@ -133,10 +133,13 @@
           </label>
         </fieldset>
 
-        <button
-          class="contact-btn"
-          type="submit"
-        >Skicka</button>
+        <div class="button-wrapper">
+          <input
+            type="submit"
+            class="contact-btn"
+            value="Skicka"
+          >
+        </div>
       </form>
 
       <div class="side-content">
@@ -150,19 +153,19 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 Skin Expert. All rights reserved.</p>
+    <p>&copy; 2025 Skin Expert. All rights reserved.</p>
     <div class="social-media">
       <a href="#"><img
           src="images/facebook-icon.png"
           alt="Facebook"
         ></a>
       <a href="#"><img
-          src="images/instagram-icon.png"
+          src="images/Instagram-icon.png"
           alt="Instagram"
         ></a>
       <a href="#"><img
-          src="images/twitter-icon.png"
-          alt="Twitter"
+          src="images/linkedin.webp"
+          alt="LinkedIn"
         ></a>
     </div>
   </footer>
