add hamburger menu

--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
           alt="Skin Expert Logo"
         >
       </div>
+
       <div class="navbar-right">
+        <button class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+
         <div class="nav-links">
           <a
             href="#"
@@ -54,7 +61,7 @@
       <div class="hero-text">
         <h1>Welcome to Skin Expert</h1>
         <p>Your one-stop solution for all skin care needs.</p>
-        <button>Läs mer</button>
+        <button class="btn">Läs mer</button>
       </div>
     </div>
   </header>
@@ -139,6 +146,7 @@
     </div>
     <p>&copy; 2025 Skin Expert. All rights reserved.</p>
   </footer>
+  <script src="script.js"></script>
 </body>
 
 </html>
