--- a/kontakt.html
+++ b/kontakt.html
@@ -56,7 +56,7 @@
       <div class="hero-text">
         <h1>Welcome to Skin Expert</h1>
         <p>Your one-stop solution for all skin care needs.</p>
-        <button>Läs mer</button>
+        <button class="btn">Läs mer</button>
       </div>
     </div>
   </header>
