add js to contact page

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
   <header>
     <nav class="navbar">
       <div class="navbar-left">
-        <img
-          class="logo"
-          src="images/logga1.jpg"
-          alt="Skin Expert Logo"
-        >
+        <a href="index.html">
+          <img
+            class="logo"
+            src="images/logga1.jpg"
+            alt="Skin Expert Logo"
+          >
+        </a>
       </div>
 
       <div class="navbar-right">
