--- a/kontakt.html
+++ b/kontakt.html
@@ -30,7 +30,14 @@
           >
         </a>
       </div>
+
       <div class="navbar-right">
+        <button class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+
         <div class="nav-links">
           <a
             href="#"
@@ -169,6 +176,7 @@
     </div>
     <p>&copy; 2025 Skin Expert. All rights reserved.</p>
   </footer>
+  <script src="script.js"></script>
 </body>
 
 </html>
