add manual slider and new layout for navbar

--- a/index.html
+++ b/index.html
@@ -31,13 +31,7 @@
         </a>
       </div>
 
-      <div class="navbar-right">
-        <button class="hamburger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
-
+      <div class="navbar-center">
         <div class="nav-links">
           <a
             href="#"
@@ -57,16 +51,55 @@
           >KONTAKT</a>
         </div>
       </div>
+
+      <div class="navbar-right">
+        <button class="booking-btn">BOKA</button>
+        <button class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </div>
     </nav>
 
     <div class="hero-image">
       <div class="hero-text">
         <h1>Welcome to Skin Expert</h1>
-        <p>Your one-stop solution for all skin care needs.</p>
+        <p>Your one-stop solution for all skin care needs</p>
         <button class="btn">Läs mer</button>
       </div>
     </div>
   </header>
+
+  <section class="manual-slider">
+    <div class="slide active">
+      <img
+        src="images/slide1.jpg"
+        alt="Hudvård 1"
+      >
+    </div>
+    <div class="slide">
+      <img
+        src="images/slide2.jpg"
+        alt="Hudvård 2"
+      >
+    </div>
+    <div class="slide">
+      <img
+        src="images/slide3.jpg"
+        alt="Hudvård 3"
+      >
+    </div>
+
+    <button class="prev">&#10094;</button>
+    <button class="next">&#10095;</button>
+
+    <div class="dots">
+      <span class="dot active"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+    </div>
+  </section>
 
   <main>
     <section class="grid-container">
