change image in manual slider and navbar

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="index.html">
           <img
             class="logo"
-            src="images/logga1.jpg"
+            src="images/svartlogga.png"
             alt="Skin Expert Logo"
           >
         </a>
